css/conditionals/exec-ed/ee-program-finder.css
/* ... */
.image-ctas .field-name-field-link-single a:after {
  color: white;
  font-size: 12px;
  margin-left: 3px;
}
.image-ctas .field-name-field-link-single a:hover {
  background: rgba(1, 72, 114, 0.85) !important;
}
.image-ctas .group-left,
.image-ctas .group-right {
  float: none;
  width: 100%;
}
.image-ctas .group-right {
  padding: 0 !important;
  position: absolute;
  bottom: 0;
}

h2.isotopify-title {
  color: #231f20;
  font-family: "NewsGothicBT", "Avant Garde", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 28px;
  font-weight: bold;
  line-height: 1.2;
  margin-bottom: 18px;
}

.compare-items {
  background: #f4f4f4;
  max-width: 870px;
  min-height: 238px;
  padding: 26px;
  width: 100%;
  position: relative;
  z-index: 1;
}
@media (max-width: 75em) {
  .compare-items {
    min-height: 305px;
  }
}
@media (max-width: 73.125em) {
  .compare-items {
    margin-left: -20px;
    max-width: initial;
  }
}
.compare-items .header {
  overflow: hidden;
  *zoom: 1;
}
.compare-items .header h3 {
  display: inline-block;
  font-size: 22px;
  line-height: 1.3;
  margin-bottom: 26px;
}
.compare-items .header .compare-button {
  float: right;
}
.compare-items .compare-item {
  background: white;
  display: inline-block;
  float: left;
  padding: 18px;
  position: relative;
  vertical-align: top;
  width: 260px;
}
.compare-items .compare-item:nth-of-type(odd) {
  margin: 0 9px;
}
@media (max-width: 75em) {
  .compare-items .compare-item {
    display: block;
    margin: 10px 0 0 0 !important;
    width: 100%;
  }
}
.compare-items .compare-program-title {
  font-size: 16px;
  line-height: 1.2;
  margin-left: 38px;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-box-align-items: center;
  -moz-box-align-items: center;
  -ms-flexbox-align-items: center;
  -webkit-align-items: center;
  align-items: center;
  min-height: 95px;
  width: 186px;
}
@media (max-width: 75em) {
  .compare-items .compare-program-title {
    min-height: 20px;
    width: 90%;
  }
}
.compare-items .remove-item {
  background: #bac405;
  border-radius: 50px;
  color: white;
  display: inline-block;
  height: 25px;
  line-height: 1.5;
  overflow: hidden;
  position: absolute;
  text-align: center;
  top: 53px;
  width: 25px;
}
.compare-items .remove-item:hover {
  background: #2d6280;
  cursor: pointer;
}
.compare-items .remove-item:before {
  content: "\f11b";
  display: inline;
  speak: none;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-smoothing: antialiased;
  text-transform: none;
  line-height: 1;
  font-style: normal;
  font-variant: normal;
  font-weight: normal;
  font-family: 'icons';
}
.compare-items .remove-item:before {
  display: inline-block;
  padding: 5px;
  transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
}
@media (max-width: 75em) {
  .compare-items .remove-item {
    top: 15px;
  }
}

.pane-mini-program-finder {
  max-height: 400px;
}
@media (max-width: 75em) {
  .pane-mini-program-finder {
    border-bottom: 1px lightgray solid;
    max-height: inherit;
  }
}
.pane-mini-program-finder .pane-content {
  position: relative;
  bottom: 4px;
}
@media (min-width: 79.6875em) {
  .pane-mini-program-finder .mini-program-finder-image img {
    -o-object-fit: cover;
    object-fit: cover;
    height: 10vh;
    min-height: 400px;
    width: 100vw;
  }
}
.pane-mini-program-finder .mini-program-finder-apply {
  margin: 0 auto;
  max-width: 1170px;
  position: relative;
  right: 0;
  top: 0;
  width: 100%;
}
.pane-mini-program-finder .mini-program-finder-apply a {
  color: white;
  font-size: 16px;
  line-height: 1.2;
  padding: 16px 26px;
  position: absolute;
  right: 0;
  top: 26px;
}
@media (max-width: 75em) {
  .pane-mini-program-finder .mini-program-finder-apply a {
    right: 26px;
  }
}
@media (max-width: 20em) {
  .pane-mini-program-finder .mini-program-finder-apply a {
    top: 18px;
  }
}
.pane-mini-program-finder .mini-program-finder-title-filters {
  background: white;
  padding: 26px;
  position: absolute;
  top: 273px;
  width: 100%;
}
@media (max-width: 75em) {
  .pane-mini-program-finder .mini-program-finder-title-filters {
    min-height: 100px;
    position: relative;
    top: 0;
  }
}
@media (max-width: 37.5em) {
  .pane-mini-program-finder .mini-program-finder-title-filters {
    min-height: 270px;
  }
}
.pane-mini-program-finder .mini-program-finder-title-filters .inner {
  margin: 0 auto;
  max-width: 1170px;
}
.pane-mini-program-finder .mini-program-finder-title-filters h1 {
  font-family: "NewsGothicBT", "Avant Garde", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
  display: inline-block;
  font-size: 34px;
  font-weight: bold;
  line-height: 1.2;
  position: relative;
  top: 6px;
}
@media (max-width: 72.1875em) {
  .pane-mini-program-finder .mini-program-finder-title-filters h1 {
    font-size: 28px;
    top: 10px;
  }
}
@media (max-width: 65.9375em) {
  .pane-mini-program-finder .mini-program-finder-title-filters h1 {
    display: block;
    margin-bottom: 10px;
    top: 0;
  }
}
.pane-mini-program-finder .mini-finder-filters {
  float: right;
  display: inline-block;
}
@media (max-width: 65.9375em) {
  .pane-mini-program-finder .mini-finder-filters {
    float: none;
    display: block;
  }
}
.pane-mini-program-finder .form-item-program-topic {
  left: -290px;
  position: relative;
}
@media (max-width: 65.9375em) {
  .pane-mini-program-finder .form-item-program-topic {
    left: 0;
  }
}
.pane-mini-program-finder .isotopify-filter-daterange {
  position: absolute;
  right: 55px;
  top: 0;
}
@media (max-width: 65.9375em) {
  .pane-mini-program-finder .isotopify-filter-daterange {
    left: 250px;
    right: 0;
  }
}
/* ... */

