WP-8037 Fixed the issue of Go button overlapping Date Range

--- a/css/conditionals/exec-ed/ee-program-finder.css
+++ b/css/conditionals/exec-ed/ee-program-finder.css
@@ -1474,7 +1474,7 @@ h2.isotopify-title {
   }
 }
 .pane-mini-program-finder .form-item-program-topic {
-  left: -290px;
+  left: -335px;
   position: relative;
 }
 @media (max-width: 65.9375em) {
@@ -1484,7 +1484,7 @@ h2.isotopify-title {
 }
 .pane-mini-program-finder .isotopify-filter-daterange {
   position: absolute;
-  right: 55px;
+  right: 110px;
   top: 0;
 }
 @media (max-width: 65.9375em) {
